--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/main.js",
   "scripts": {
     "start": "electron .",
-    "test": "mocha -r ts-node/register **/*-test.*s"
+    "test": "jest"
   },
   "author": "David Eastmond",
   "license": "ISC",
@@ -15,11 +15,9 @@
     "@types/jquery": "^3.3.34",
     "axios": "^0.19.2",
     "bootstrap": "^3.4.1",
-    "chai": "^4.2.0",
     "dotenv": "^8.2.0",
     "electron-root-path": "^1.0.16",
     "jquery": "^3.4.1",
-    "mocha": "^7.1.1",
     "moment": "^2.24.0",
     "save": "^2.4.0",
     "typescript": "^3.8.3"
@@ -30,6 +28,7 @@
     "@types/mocha": "^7.0.2",
     "@types/node": "^12.12.34",
     "electron": "^8.2.0",
+    "jest": "^25.3.0",
     "ts-node": "^8.8.2"
   },
   "type": "module"
