--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,10 @@
 {
-  "extends": "tslint:recommended",
   "rules": {
     "max-line-length": {
       "options": [100]
     },
     "member-ordering": false,
-    "no-console": true,
+    "no-console": 1,
     "no-consecutive-blank-lines": false,
     "object-literal-sort-keys": false,
     "ordered-imports": false,
