--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "main": "dist/main.js",
   "scripts": {
     "start": "electron .",
-    "test": "jest"
+    "test": "jest",
+    "jest": {
+      "transform": {
+        "^.+\\.jsx?$": "babel-jest"
+      }
+    }
   },
   "author": "David Eastmond",
   "license": "ISC",
@@ -23,10 +28,12 @@
     "typescript": "^3.8.3"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.9.5",
     "@types/chai": "^4.2.11",
     "@types/expect": "^24.3.0",
     "@types/mocha": "^7.0.2",
     "@types/node": "^12.12.34",
+    "babel-jest": "^25.4.0",
     "electron": "^8.2.0",
     "jest": "^25.3.0",
     "ts-node": "^8.8.2"
