--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -12,7 +12,8 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
+    runs-on: windows-latest
 
     strategy:
       matrix:
