--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -26,7 +26,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
     - run: npm install -g typescript
-    - run: npm tsc -w
+    - run: tsc -w
     - run: npm run build --if-present
     - run: npm test
       env:
