--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -26,11 +26,10 @@ jobs:
         node-version: ${{ matrix.node-version }}
       env:
         API_KEY: ${{ secrets.API_KEY }}
-    - run: echo ${{ secrets.API_KEY }}
+    - run: echo "${{ secrets.API_KEY }}""
     - run: npm ci
     - run: npm install -g typescript
     - run: tsc
     - run: npm run build --if-present
-    - run: npm test
       env:
         CI: true
