--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -26,7 +26,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
       env:
         API_KEY: ${{ secrets.API_KEY }}
-    - run: echo "${{ secrets.API_KEY }}""
+    - run: echo "${{ secrets.API_KEY }}"
     - run: npm ci
     - run: npm install -g typescript
     - run: tsc
