--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -32,6 +32,7 @@ jobs:
         CI: true
         API_KEY: ${{ secrets.API_KEY }}
     
+  winbuild:
     runs-on: windows-latest
     
     strategy:
