--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/mocha": "^7.0.2",
     "@types/node": "^12.12.34",
     "babel-jest": "^25.4.0",
+    "devtron": "^1.4.0",
     "electron": "^8.2.0",
     "jest": "^25.3.0",
     "ts-node": "^8.8.2"
