--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^8.2.0",
     "electron-root-path": "^1.0.16",
     "jquery": "^3.5.0",
+    "leaflet": "^1.6.0",
     "moment": "^2.24.0",
     "save": "^2.4.0",
     "ts-jest": "^25.5.1",
