added a satellite and street map view to radar. Modified some CSS and added a line to sample.env

--- a/sample.env
+++ b/sample.env
@@ -1,3 +1,3 @@
 API_ORIGIN=https://home.openweathermap.org/
-API_KEY=
-MAP_TILE_LAYER_AIP_KEY=
+API_KEY=[openWeather API KEY]
+MAP_TILE_LAYER_AIP_KEY= [Map box API KEY]
