added config option UI

--- a/sample.env
+++ b/sample.env
@@ -1,3 +1,4 @@
 API_ORIGIN=https://home.openweathermap.org/
 API_KEY=[openWeather API KEY]
 MAP_TILE_LAYER_AIP_KEY= [Map box API KEY]
+UPDATE_TIME=240
