--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jquery": "^3.5.0",
     "leaflet": "^1.6.0",
     "moment": "^2.24.0",
+    "moment-timezone": "^0.5.31",
     "paginationjs": "^2.1.5",
     "save": "^2.4.0",
     "ts-jest": "^25.5.1",
