--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "Cross-platform weather app built in electron.js",
   "main": "dist/main.js",
   "scripts": {
-    "start": "electron .",
+    "start": "electron-forge start",
     "test": "jest",
     "jest": {
       "transform": {
         "^.+\\.jsx?$": "babel-jest"
       }
-    }
+    },
+    "package": "electron-forge package",
+    "make": "electron-forge make"
   },
   "author": "David Eastmond",
   "license": "ISC",
@@ -22,6 +24,7 @@
     "bootstrap": "^3.4.1",
     "dotenv": "^8.2.0",
     "electron-root-path": "^1.0.16",
+    "electron-squirrel-startup": "^1.0.0",
     "jquery": "^3.5.0",
     "leaflet": "^1.6.0",
     "moment": "^2.24.0",
@@ -33,6 +36,11 @@
   },
   "devDependencies": {
     "@babel/preset-env": "^7.9.5",
+    "@electron-forge/cli": "^6.0.0-beta.52",
+    "@electron-forge/maker-deb": "^6.0.0-beta.52",
+    "@electron-forge/maker-rpm": "^6.0.0-beta.52",
+    "@electron-forge/maker-squirrel": "^6.0.0-beta.52",
+    "@electron-forge/maker-zip": "^6.0.0-beta.52",
     "@types/chai": "^4.2.11",
     "@types/expect": "^24.3.0",
     "@types/mocha": "^7.0.2",
@@ -43,5 +51,32 @@
     "jest": "^25.3.0",
     "ts-node": "^8.8.2"
   },
-  "type": "module"
+  "type": "module",
+  "config": {
+    "forge": {
+      "packagerConfig": {},
+      "makers": [
+        {
+          "name": "@electron-forge/maker-squirrel",
+          "config": {
+            "name": "easy_weather"
+          }
+        },
+        {
+          "name": "@electron-forge/maker-zip",
+          "platforms": [
+            "darwin"
+          ]
+        },
+        {
+          "name": "@electron-forge/maker-deb",
+          "config": {}
+        },
+        {
+          "name": "@electron-forge/maker-rpm",
+          "config": {}
+        }
+      ]
+    }
+  }
 }
